--- a/angular.json
+++ b/angular.json
@@ -14,6 +14,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/angular-tour-of-heroes",
+            "baseHref": "/angular-tour-of-heros/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
